src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Desired_Location__c</fullName>
        <label>Desired Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <picklist>
            <picklistValues>
                <fullName>College Grad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+ Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_to_LinkeIn_Profile__c</fullName>
        <label>Link to LinkeIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rehire__c</fullName>
        <label>Rehire?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReportsToContact__c</fullName>
        <formula>CASESAFEID(Contact.ReportsTo.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportsToContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teamwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New HIre</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_History__c</fullName>
        <label>Work History</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>physicalDeliveryOfficeName__c</fullName>
        <description>the field physicalDeliveryOfficeName from AD</description>
        <label>Office Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse_pto_end_date__c</fullName>
        <description>End Date of vacation.</description>
        <inlineHelpText>End Date of vacation.</inlineHelpText>
        <label>PTO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse_pto_start_date__c</fullName>
        <description>Start Date of vacation.</description>
        <inlineHelpText>Start Date of vacation.</inlineHelpText>
        <label>PTO Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Customer Community User - Custom</value>
        </filters>
        <label>Community Users</label>
    </listViews>
    <listViews>
        <fullName>Demo_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Eric,Mindy,Helen,Roberts,Alex,Steven,Brown,Garcia,Tim,steve</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>Joel,Cottet,DoNot</value>
        </filters>
        <label>Demo Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>